fix: ui changes - repositioned Edit button and close and save Button in profileCard. - changed position of ExternalLink icon to right. - removed "influencer" and "visionary", and replaced "revolution" with "visionary" in FloatingPills - changes to Pulse animation explorer in Home Screen - aligned View link in ProfileOwnership Tab - match Verificationdetails card spacing to ProfileCard layout

--- a/apps/client/src/styles/animations.css
+++ b/apps/client/src/styles/animations.css
@@ -197,6 +197,34 @@
   }
 }
 
+@keyframes explore-ping {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  25% {
+    transform: scale(2);
+    opacity: 0;
+  }
+  33% {
+    transform: scale(2);
+    opacity: 0;
+  }
+  66% {
+    transform: scale(2);
+    opacity: 0;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+.animate-explore-ping {
+  animation: explore-ping 3s linear infinite;
+}
+
 @keyframes glitch {
   0% {
     text-shadow:
